--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <p>Cześć</p>
+    <p>Cześć</p>
+    <p>Cześć</p>
+    <p>Cześć</p>
+    <p>Cześć</p>
     
     <script src="dist/js/main.min.js"></script>
 </body>
