--- a/page.html
+++ b/page.html
@@ -16,8 +16,7 @@
         <li>link nr 4</li>
         <li>link nr 5</li>
     </ul>
-</nav>    <p>Strona główna!</p>
-    <a href="page.html">Podstrona</a>
+</nav>    <p>Podstrona</p>
     <footer>
     <p>footer</p>
 </footer>    <script src="dist/js/main.min.js"></script>
